--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <button id="stand">Stand</button>
     <p id="result"></p>
 
-    <script src="blackjack.js"></script>
+    <script src="blacjack.js"></script>
   </body>
 </html>
