--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Black jack</title>
   </head>
   <body>
+    <!--Use javascript to populate the value-->
     <h2>Dealer: <span id="dealer-sum"></span></h2>
     <div id="dealer-cards">
         <!--1 card face down-->
@@ -15,6 +16,7 @@
       
     </div>
 
+     <!--Use javascript to populate the value-->
     <h2>You : <span id="your-sum"></span></h2>
     <div id="your-cards"></div>
 
